--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,18 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_icon=cruelfishing_icon.png
+
+
+icon=cruelfishing_icon.png
+mod_version=1.16.5-0.0.2
+minecraft_version=1.16.5
+snapshot_version=20201028-1.16.3
+forge_version=36.1.12
+author=igorstan
+id=cruelfishing
+name=Cruel Fishing
+group=com.igorstan.cruelfishing
+description=Enter the World of Fish and become who you were meant to be
+
+
 org.gradle.java.home=C:\\Users\\Igor\\.jdks\\corretto-1.8.0_292
