--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,11 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+
+    implementation fg.deobf("io.gitlab.hohserg.elegant.networking:elegant-networking-1.16:3.14")
+
+    compileOnly "io.gitlab.hohserg.elegant.networking:annotation-processor:3.14"
+    annotationProcessor "io.gitlab.hohserg.elegant.networking:annotation-processor:3.14"
 }
 
 jar {
