Added loot system

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'maven-publish'
 
-version = "${version}"
+version = "${mod_version}"
 group = "${group}"
 archivesBaseName = "${id}-forge"
 
@@ -81,13 +81,14 @@ jar {
         attributes([
             "Specification-Title": "${name}",
             "Specification-Vendor": "${author}",
-            "Specification-Version": "1",
+            "Specification-Version": "${mod_version}",
             "Implementation-Title": "${name}",
-            "Implementation-Version": "${version}",
+            "Implementation-Version": "${mod_version}",
             "Implementation-Vendor" :"${author}",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+
 }
 
 
