--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ org.gradle.daemon=false
 
 
 icon=cruelfishing_icon.png
-mod_version=1.16.5-0.0.2
+mod_version=1.16.5-0.0.3
 minecraft_version=1.16.5
 snapshot_version=20201028-1.16.3
-forge_version=36.1.12
+forge_version=36.2.20
 author=igorstan
 id=cruelfishing
 name=Cruel Fishing
@@ -17,4 +17,5 @@ group=com.igorstan.cruelfishing
 description=Enter the World of Fish and become who you were meant to be
 
 
-org.gradle.java.home=C:\\Users\\Igor\\.jdks\\corretto-1.8.0_292
+org.gradle.java.home=C:\\Users\\igors\\.jdks\\corretto-1.8.0_292
+
