--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx8G
 org.gradle.daemon=false
 
 
 
 icon=cruelfishing_icon.png
-mod_version=1.16.5-0.0.3
+mod_version=1.16.5-0.0.4
 minecraft_version=1.16.5
 snapshot_version=20201028-1.16.3
 forge_version=36.2.20
@@ -15,6 +15,7 @@ id=cruelfishing
 name=Cruel Fishing
 group=com.igorstan.cruelfishing
 description=Enter the World of Fish and become who you were meant to be
+license=CBT license
 
 
 org.gradle.java.home=C:\\Users\\igors\\.jdks\\corretto-1.8.0_292
